Enhance menu UI by adding category tabs and a cart system for better user interaction. Introduce new styles for menu items and placeholders in CSS. Update InventorySeeder to include realistic menu samples with categories and tags for improved item organization. This update improves the overall user experience and maintainability of the code.